[project]
name = "omnigraph-vault"
version = "1.0.0"
description = "Personal LightRAG-backed knowledge base + Agentic-RAG-v1 research lib"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib", "lib.*", "omnigraph_search", "omnigraph_search.*"]

[tool.setuptools.package-dir]
"omnigraph.research" = "lib/research"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: unit-tier tests (fast, mocked, local-runnable)",
    "integration: integration-tier tests (remote-only, live deps)",
    "remote: tests that must run on the remote WSL host (see private memory for connection)",
]
