[project]
name = "omnigraph-vault"
version = "1.0.0"
description = "Personal LightRAG-backed knowledge base + Agentic-RAG-v1 research lib"
requires-python = ">=3.11"

[tool.setuptools]
# Explicit list — `find` doesn't pick up the `omnigraph.research` namespace
# alias (no physical `omnigraph/` dir on disk), so we declare every package
# by name and pin its source dir via `package-dir`.
packages = [
    "lib",
    "lib.research",
    "lib.research.stages",
    "omnigraph_search",
    "omnigraph.research",
    "omnigraph.research.stages",
]

[tool.setuptools.package-dir]
# `omnigraph.research` is an alias for the physical `lib/research` dir; this
# is what makes `python -m omnigraph.research` resolve after `pip install -e .`.
"omnigraph.research" = "lib/research"
"omnigraph.research.stages" = "lib/research/stages"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: unit-tier tests (fast, mocked, local-runnable)",
    "integration: integration-tier tests (remote-only, live deps)",
    "remote: tests that must run on the remote WSL host (see private memory for connection)",
    "slow: tests that spawn subprocesses or hit live deps; opt in with `-m slow`",
    "eval: opt-in quality eval requiring full LightRAG corpus (skipped by default)",
]
